FIX: make selected menu option more readable

--- a/src/main/webapp/cust/mantamatcher/styles/_bootstrap-overrides.less
+++ b/src/main/webapp/cust/mantamatcher/styles/_bootstrap-overrides.less
@@ -104,6 +104,12 @@ label { font-weight: normal; }
 		color: @brand-dark; 
 		font-weight: 300;
 		}
+		
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover, 
+	.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus{ 
+		color: white; 
+		font-weight: 300;
+		}
 
 /* Reset - not wanting bullets */
 .carousel-indicators {
